Styling singup component

--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -6,5 +6,6 @@
         <mat-form-field>
             <input type="password" matInput placeholder="Your password">
         </mat-form-field>
+        <button type="submit" mat-raised-button color="primary">Submit</button>
     </form>
 </section>
