--- a/src/app/auth/signup/signup.component.scss
+++ b/src/app/auth/signup/signup.component.scss
@@ -18,6 +18,10 @@
             button {
                 margin-top: 3.5rem;
             }
+
+            .picker {
+                margin-top: 1rem;
+            }
         }
     }
 }
