--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -20,6 +20,13 @@
             <mat-hint align="end" *ngIf="pwInput.value?.length > 0">{{ pwInput.value?.length}}</mat-hint>
             <mat-error>Field must not be empty.</mat-error>
         </mat-form-field>
+        <mat-form-field class="picker">
+            <input matInput
+                placeholder="Your birthdate"
+                [matDatepicker]="picker">
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>
         <button type="submit" mat-raised-button color="primary">Submit</button>
     </form>
 </section>
