--- a/src/app/auth/signup/signup.component.scss
+++ b/src/app/auth/signup/signup.component.scss
@@ -22,6 +22,9 @@
             .picker {
                 margin-top: 1rem;
             }
+            .mat-checkbox {
+                margin-top: 1rem;
+            }
         }
     }
 }
