--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,1 +1,28 @@
-<p>login works!</p>
+<section>
+    <form #form="ngForm" (ngSubmit)="onSubmit(form)">
+        <mat-form-field>
+            <input type="email" matInput
+                placeholder="Your email"
+                ngModel
+                name="email"
+                required
+                #emailInput="ngModel"
+                email>
+            <mat-error *ngIf="emailInput.hasError('required')">Field must not be empty.</mat-error>
+            <mat-error *ngIf="!emailInput.hasError('required')">E-mail is invalid</mat-error>
+        </mat-form-field>
+        <mat-form-field>
+            <input type="password" matInput
+                placeholder="Your password"
+                ngModel
+                name="password"
+                required
+                minlength="6"
+                #pwInput="ngModel">
+            <mat-error>Field must not be empty.</mat-error>
+        </mat-form-field>
+
+        <button type="submit" mat-raised-button color="primary" [disabled]="form.invalid">Submit</button>
+    </form>
+</section>
+    
