--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,4 +2,29 @@
     display: flex;
     min-height: 100vh;
     flex-direction: column;
+
+    .menu {
+        display: flex;
+        flex-direction: column;
+        padding: 2rem;
+        a {
+            margin: 1rem 0rem;
+        }
+    }
+
+    .mat-toolbar {
+        display: flex;
+        align-items: center;
+        button {
+            display: flex;
+        }
+        span {
+            display: flex;
+        }
+    }
+
+    main{
+        display: flex;
+        flex-grow: 1;
+    }
 }
