--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,22 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
-body{
-    font-family: "Segoe UI";
+html, body{
+    font-family: "Roboto", 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+body {
+    margin: 0;
+}
+
+.mat-sidenav-container {
+    flex: 1 1 auto;
+    .mat-drawer-content {
+        display: flex;
+        height: 75vw;
+        flex-direction: column;
+        .mat-toolbar {
+            display: flex;
+            align-items: center;
+        }
+    }
 }
