--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,18 @@
 <mat-sidenav-container>
     <mat-sidenav #sidenav 
         role="navigation">
-        <div class="menu">
-            <a routerLink="/signup" (click)="sidenav.close()">Signup</a>
-            <a routerLink="/login" (click)="sidenav.close()">Login</a>
-            <a routerLink="/training" (click)="sidenav.close()">Training</a>
-        </div>
+        <mat-nav-list>
+            <a mat-list-item routerLink="/signup" (click)="sidenav.close()">Signup</a>
+            <a mat-list-item routerLink="/login" (click)="sidenav.close()">Login</a>
+            <a mat-list-item routerLink="/training" (click)="sidenav.close()">Training</a>
+        </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content>
         <mat-toolbar color="primary">
             <button mat-icon-button (click)="sidenav.toggle()">
                 <mat-icon>menu</mat-icon>
             </button>
-            <span>
+            <span class="home" routerLink="/">
                 fitness-tracker
             </span>
         </mat-toolbar>
