--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,20 +3,25 @@
     min-height: 100vh;
     flex-direction: column;
 
-    .menu {
-        display: flex;
-        flex-direction: column;
-        padding: 2rem;
-        a {
-            margin: 1rem 0rem;
-        }
+    .mat-nav-list {
+        width: 250px;
     }
 
     .mat-toolbar {
         display: flex;
         align-items: center;
+        .home {
+            cursor: pointer;
+            &:focus {
+                outline: none;
+            }
+        }
         button {
             display: flex;
+            align-items: center;
+            .mat-icon {
+                display: flex;
+            }
         }
         span {
             display: flex;
