--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,1 +1,12 @@
-<p>welcome works!</p>
+<section>
+    <h1>ACTIVITY</h1>
+    <p>Stay active and enjoy better health and more fun!</p>
+</section>
+<section>
+    <h1>COMMUNITY</h1>
+    <p>Get to know other people who share your passion!</p>
+</section>
+<section>
+    <h1>CHALLENGES</h1>
+    <p>Never stop! Dive into new challenges every day</p>
+</section>
