--- a/src/app/training/new-training/new-training.component.scss
+++ b/src/app/training/new-training/new-training.component.scss
@@ -1,3 +1,56 @@
+:host {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1;
+}
+
 .mat-card {
     width: 400px;
+    .mat-card-title {
+        text-align: center;
+    }
+    .mat-card-content {
+        margin-top: 2rem;
+    }
+    .mat-card-actions {
+        display: flex;
+        justify-content: center;
+    }
+}
+
+::ng-deep .mat-button-toggle-group-appearance-standard {
+    border: none;
+}
+
+.fitness-tracker-exercise-group {
+    display: flex;
+    justify-content: space-between;
+}
+
+.fitness-tracker-exercise {
+    border-radius: 100%;
+    border: 1px solid rgba(0,0,0,.12);
+    height: 5rem;
+    width: 5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    ::ng-deep .mat-button-toggle-label-content {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        span {
+            margin-top: -0.75rem;
+        }
+    }
+
+    &.mat-button-toggle-checked {
+        background: #3f51b5;
+        color: white;
+    }
+
 }
