Starting current training page

--- a/src/app/training/current-training/current-training.component.html
+++ b/src/app/training/current-training/current-training.component.html
@@ -1,1 +1,3 @@
-<p>current-training works!</p>
+<h1>{{ exercise }}</h1>
+<div class="time-counter"></div>
+<button mat-raised-button color="accent" (click)="onStop()">Stop</button>
