--- a/src/app/training/training.component.html
+++ b/src/app/training/training.component.html
@@ -1,8 +1,12 @@
-<mat-tab-group>
+<mat-tab-group *ngIf="ongoingTraining === ''">
     <mat-tab label="New Exercise">
-        <app-new-training></app-new-training>
+        <app-new-training (trainingStarted)="onTrainingStart($event)"></app-new-training>
     </mat-tab>
     <mat-tab label="Past Exercises">
         <app-past-training></app-past-training>
     </mat-tab>
 </mat-tab-group>
+<app-current-training *ngIf="ongoingTraining !== ''"
+    [exercise]="ongoingTraining"
+    (trainingFinished)="onTrainingFinish()">
+</app-current-training>
