--- a/src/app/training/new-training/new-training.component.scss
+++ b/src/app/training/new-training/new-training.component.scss
@@ -3,6 +3,17 @@
     justify-content: center;
     align-items: center;
     flex-grow: 1;
+
+    h2 {
+        text-align: center;
+        margin-bottom: 2rem;
+    }
+
+    button {
+        display: flex;
+        margin: 0 auto;
+        font-size: 1.25rem;
+    }
 }
 
 .mat-card {
@@ -38,13 +49,13 @@
 .fitness-tracker-exercise {
     border-radius: 100%;
     border: 1px solid rgba(0,0,0,.12);
-    height: 5rem;
-    width: 5rem;
+    height: 5.5rem;
+    width: 5.5rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 0 0.5rem 0.5rem 0;
+    margin: 0 0.3rem 0.75rem 0;
 
     ::ng-deep .mat-button-toggle-label-content {
         display: flex;
@@ -52,7 +63,8 @@
         justify-content: center;
         align-items: center;
         span {
-            margin-top: -0.75rem;
+            margin-top: -1rem;
+            font-size: 0.75rem;
         }
     }
 
