--- a/src/app/training/current-training/current-training.component.scss
+++ b/src/app/training/current-training/current-training.component.scss
@@ -5,7 +5,7 @@
     align-items: center;
 
     .time-counter {
-        border: 1px solid #3f51b5;
+        border: 2px solid #3f51b5;
         border-radius: 100%;
         width: 65vw;
         height: 65vw;
@@ -15,5 +15,6 @@
         margin-top: 2rem;
         display: flex;
         padding: auto 3rem;
+        font-size: 1.25rem
     }
 }
