--- a/src/app/training/new-training/new-training.component.scss
+++ b/src/app/training/new-training/new-training.component.scss
@@ -65,6 +65,7 @@
         span {
             margin-top: -1rem;
             font-size: 0.75rem;
+            margin-bottom: -0.75rem;
         }
     }
 
